--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,13 @@ services:
       - mongo_db
     ports:
       - 8080:8080
-#   api_front:
-#     build: ./EFC_CDA_Localib
-#     container_name: angularlocalib
-#     depends_on:
-#       - api_back
-#     ports:
-#       - 4200:4200
+  api_front:
+    build: ./EFC_CDA_Localib
+    container_name: angularlocalib
+    depends_on:
+      - api_back
+    ports:
+      - 4200:4200
 
 # version: '3.7'
 #test bigup
